--- a/creator/src/test/resources/application.yaml
+++ b/creator/src/test/resources/application.yaml
@@ -8,6 +8,8 @@ spring:
     console:
       enabled: true
       path: /db
+  config:
+    import: configserver:http://${CONFIG_SERVER_URL:localhost}:9296
   datasource:
     url: jdbc:h2:mem:blog
     driverClassName: org.h2.Driver
@@ -17,3 +19,7 @@ spring:
     pool-size: 30
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+
+eureka:
+  client:
+    enabled: false
