--- a/articles/pom.xml
+++ b/articles/pom.xml
@@ -10,11 +10,13 @@
 	</parent>
 	<groupId>me.plurg</groupId>
 	<artifactId>articles</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>articles</name>
 	<description>A service for all blog articles</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
