--- a/service-registry/pom.xml
+++ b/service-registry/pom.xml
@@ -15,6 +15,8 @@
 	<description>Configuration service for the blog api</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
