--- a/creator/src/main/resources/application.yaml
+++ b/creator/src/main/resources/application.yaml
@@ -9,10 +9,10 @@ spring:
       enabled: true
       path: /db
   datasource:
-    url: jdbc:h2:mem:blog
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:postgresql://${DB_HOST:localhost}:5432/creatordb
+    driverClassName: org.postgresql.Driver
+    username: postgres
+    password: "root"
     ddl-auto: create-drop
     pool-size: 30
   jpa:
