--- a/k8s/creator-service-deployment.yaml
+++ b/k8s/creator-service-deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: creator-service-app
-          image: <Image>
+          image: confidencedev/creator:latest
           imagePullPolicy: Always
           resources:
             limits:
