--- a/k8s/config-server-deployment.yaml
+++ b/k8s/config-server-deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: config-server-app
-          image: <Image>
+          image: confidencedev/config-server:latest
           resources:
             limits:
               memory: "128Mi"
