--- a/k8s/service-registry-statefulset.yaml
+++ b/k8s/service-registry-statefulset.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: eureka
-          image: <image>
+          image: confidencedev/service-registry:latest
           ports:
             - containerPort: 8761
 
