--- a/k8s/postgresql-pvc.yaml
+++ b/k8s/postgresql-pvc.yaml
@@ -46,7 +46,7 @@ spec:
     spec:
       containers:
         - name: postgresql
-          image: <image>
+          image: postgres
           env:
             - name: POSTGRESQL_ROOT_PASSWORD
               value: root
