--- a/k8s/creator-service-deployment.yaml
+++ b/k8s/creator-service-deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: creator-service-app
-          image: confidencedev/creator:latest
+          image: confidencedev/creator:0.0.1
           imagePullPolicy: Always
           ports:
             - containerPort: 8081
