--- a/k8s/postgresql-pvc.yaml
+++ b/k8s/postgresql-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgresql-pv
+  name: postgres-pv
 spec:
   capacity:
     storage: 1Gi
@@ -19,7 +19,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgresql-pvc
+  name: postgres-pvc
 spec:
   resources:
     requests:
@@ -32,58 +32,61 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: postgresql
+  name: postgres
 spec:
   selector:
     matchLabels:
-      app: postgresql
-  serviceName: postgresql
+      app: postgres
+  serviceName: postgres
   replicas: 1
   template:
     metadata:
       labels:
-        app: postgresql
+        app: postgres
     spec:
       containers:
-        - name: postgresql
+        - name: postgres
           image: postgres
+          imagePullPolicy: "IfNotPresent"
           env:
-            - name: POSTGRESQL_ROOT_PASSWORD
+            - name: POSTGRES_PASSWORD
               value: root
           ports:
             - containerPort: 5432
-              name: postgresql
+              name: postgres
           volumeMounts:
-            - name: postgresql-initdb
+            - name: postgres-initdb
               mountPath: /docker-entrypoint-initdb.d
-            - name: postgresql-persistent-storage
-              mountPath: /var/lib/postgresql
+            - name: postgres-persistent-storage
+              mountPath: /var/lib/postgresql/data
       volumes:
-        - name: postgresql-initdb
+        - name: postgres-initdb
           configMap:
-            name: postgresql-initdb-cm
-        - name: postgresql-persistent-storage
+            name: postgres-initdb-cm
+        - name: postgres-persistent-storage
           persistentVolumeClaim:
-            claimName: postgresql-pvc
+            claimName: postgres-pvc
 
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgresql-initdb-cm
+  name: postgres-initdb-cm
 data:
-  init.sql: |
-    CREATE DATABASE IF NOT EXISTS creatordb;
-    CREATE DATABASE IF NOT EXISTS articledb;
+#  init.sql: |
+#    CREATE DATABASE IF NOT EXISTS creatordb;
+#    CREATE DATABASE IF NOT EXISTS articledb;
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: root
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgresql
+  name: postgres
 spec:
   clusterIP: None
   selector:
-    app: postgresql
+    app: postgres
   ports:
     - port: 5432
