--- a/k8s/zipkin-deployment.yaml
+++ b/k8s/zipkin-deployment.yaml
@@ -14,6 +14,7 @@ spec:
       containers:
         - name: zipkin
           image: openzipkin/zipkin
+          imagePullPolicy: Always
 
 ---
 apiVersion: v1
